test/operator/add_bool_num.lox
true + 123 // error: Operation not allowed
